# dirsync

./: Makefile  README.md  dirsync.sh  dirtree.py  filesystem_chooser.py  getcher.py  interactive_dir_sync.py  main.py  optionpicker.py  replicas_from_args.py  requirements.txt  setup.cfg  setup.py  treepicker.py  treeprinter.py  treewithops.py
dirsync/: config.py  dirtree.py  exampletree.py  filesystem_chooser.py  find_cmdwrapper.py  interactive_dir_sync.py  linescanner.py  main.py  optionpicker.py  pagination.py  printer.py  replicas_from_args.py  search_supplement_replicas.py  treelib_printwrapper.py  treenavigator.py  treeops.py  treepicker.py  treepicker_keybindings.py  treepicker_shelloutput.py  treeprinter.py  treesearch.py
treelib/: .gitignore  configure.ac  core
treelib/src/: Makefile.am  main.cpp  tree_example  treelib.h
