[metadata]
name = dirsync
version = 1.2.1
author = Eliran Levi
author-email = vandelayind@gmail.com
home-page = http://github.com/followerofmammon/dirsync
summary = Interactive CLI tool for synchronizing directory replicas

[files]
packages =
    dirsync

[entry_points]
console_scripts =
    dirsync = dirsync.main:main
    fspicker = dirsync.filesystem_chooser:main

[pep8]
max-line-length=109
