[metadata]
name = dirsync
version = 1.3.0
author = Eliran Levi
author-email = levioctl@gmail.com
home-page = http://github.com/levioctl/dirsync
summary = Interactive CLI tool for synchronizing directory replicas

[files]
packages =
    dirsync

[entry_points]
console_scripts =
    dirsync = dirsync.main:main

[pep8]
max-line-length=109
